# oceanum-qgis

./: .gitignore  Makefile  README.md  pyproject.toml
oceanum_datamesh/: LICENSE  README.md  __init__.py  browser.py  converters.py  dependencies.py  engine.py  icons.py  layers.py  metadata.txt  plugin.py  tasks.py  utils.py  workspace.py
oceanum_datamesh/gui/: __init__.py  connection_dialog.py  dock.py  ramp_dialog.py  settings_dialog.py
tests/: test_browser.py  test_compat.py  test_connection_dialog.py  test_converters.py  test_dependencies.py  test_engine.py  test_icons.py  test_plugin.py  test_review_fixes.py  test_settings.py  test_temporal.py  test_workspace.py
